--- a/Files/mane/frontend/public/index.html
+++ b/Files/mane/frontend/public/index.html
@@ -16,9 +16,9 @@
     <div id="root"></div>
     <!-- Socket.io Client -->
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/api.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/config.js?v=2"></script>
+    <script src="js/api.js?v=2"></script>
+    <script src="js/app.js?v=2"></script>
 </body>
 </html>
 
